--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -45,3 +45,21 @@ h6
 
   p
     margin: 50px 0
+
+
+.hero-section
+
+.studio-bottom
+  width: 550px
+
+.studio-bottom
+  img
+    width: 100%;
+    position: relative;
+    left: -120px;
+    top: -150px;
+
+@media (max-width: 980px)
+  .jumbotron
+    h1
+      font-size: 50px
