--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,5 +1,6 @@
 $headerFont: 'Yeseva One', cursive
 $bodyFont: 'Montserrat', sans-serif
+$brandBackground: linear-gradient(to right, #2AF598 , #009EFD)
 
 body
   font-family: $bodyFont !important
@@ -21,23 +22,17 @@ h6
     width: 150px
 
 .btn.btn-custom
-  background-image: linear-gradient(to right, #2AF598 , #009EFD)
+  background-image: $brandBackground
   border: 0
   border-radius: 15px 0 15px 0
   padding: 12px 30px
-  color: #FFFFFF
+  color: #FFFFFF !important
 
 .navbar-nav
   a
     padding-left: 20px !important
     padding-right: 20px !important
 
-.contact-button
-  background-image: linear-gradient(to right, #2AF598 , #009EFD)
-  border: 0
-  border-radius: 15px 0 15px 0
-  padding: 12px 30px
-  color: #FFFFFF !important
 
 .hero-section
   .jumbotron
@@ -87,6 +82,39 @@ h6
   background: #FFFFFF
   box-shadow: 0 8px 60px 0 rgba(32,168,111,.11),0 12px 90px 0 rgba(32,168,111,.11)
 
+.footer
+  background: #FAFFFD
+  
+.email-box
+  width: 700px
+  height: 70px
+  border: 1px solid white
+  box-sizing: border-box
+  margin: auto
+  padding: 10px
+  background: white
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+  input
+    border: none
+
+.get-started-btn
+  background: $brandBackground
+  color: white
+  border-radius: 7px
+  padding: 12px 30px
+  border-left: 1px solid white
+  
+.footer-main
+  img
+    width: 150px
+    height: 100px
+  li
+    padding-bottom: 10px
+
+.social-media .icon
+    height: 25px
+    width: 25px
+    color: grey
 
 // Responsive CSS
 @media (max-width: 980px)
