--- a/src/Home/Achievements/Achievements.css
+++ b/src/Home/Achievements/Achievements.css
@@ -7,11 +7,12 @@
 	padding: 20px 19px 25px 20px;
 	border-radius: 0px 35px 0px 35px;
 	color: #5c5757;
-	box-shadow: 1px 2px 3px #dffaee;
+	box-shadow: 0 8px 60px 0 rgba(32, 168, 111, 0.11),
+		0 12px 90px 0 rgba(32, 168, 111, 0.11);
 	transition: 500ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 .achievements-col:hover {
-	background-image: linear-gradient(to right, #2af598, #009efd);
+	background-image: linear-gradient(to right, #009efd, #2af598);
 	opacity: 1;
 	color: #fff;
 }
@@ -19,6 +20,7 @@
 	width: 55px;
 	margin-top: 10px;
 	filter: brightness(45%);
+	padding: 4px;
 }
 .icons:hover {
 	filter: brightness(600%);
@@ -30,16 +32,18 @@
 	padding: 20px 19px 25px 20px;
 	border-radius: 35px 0px 35px 0px;
 	color: #5c5757;
-	box-shadow: 1px 2px 3px #dffaee;
+	box-shadow: 0 8px 60px 0 rgba(32, 168, 111, 0.11),
+		0 12px 90px 0 rgba(32, 168, 111, 0.11);
 	transition: 500ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 .achievements-col-1:hover {
-	background-image: linear-gradient(to right, #2af598, #009efd);
+	background-image: linear-gradient(to right, #009efd, #2af598);
 	color: #fff;
 }
 .icons-1 {
 	width: 55px;
 	margin-top: 10px;
+	padding: 4px;
 }
 .icons-1:hover {
 	filter: brightness(600%);
@@ -51,15 +55,18 @@
 	padding: 20px 19px 25px 20px;
 	border-radius: 35px 0px 35px 0px;
 	color: #5c5757;
-	box-shadow: 1px 2px 3px #dffaee;
+	box-shadow: 0 8px 60px 0 rgba(32, 168, 111, 0.11),
+		0 12px 90px 0 rgba(32, 168, 111, 0.11);
+	transition: 500ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 .achievements-col-2:hover {
-	background-image: linear-gradient(to right, #2af598, #009efd);
+	background-image: linear-gradient(to right, #009efd, #2af598);
 	color: #fff;
 }
 .icons-2 {
 	width: 55px;
 	margin-top: 10px;
+	padding: 4px;
 }
 .icons-2:hover {
 	filter: brightness(600%);
@@ -71,18 +78,26 @@
 	padding: 20px 19px 25px 20px;
 	border-radius: 0px 35px 0px 35px;
 	color: #5c5757;
-	box-shadow: 1px 2px 3px #dffaee;
+	box-shadow: 0 8px 60px 0 rgba(32, 168, 111, 0.11),
+		0 12px 90px 0 rgba(32, 168, 111, 0.11);
+	transition: 500ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 .achievements-col-3:hover {
-	background-image: linear-gradient(to right, #2af598, #009efd);
+	background-image: linear-gradient(to right, #009efd, #2af598);
 	color: #fff;
 }
 .icons-3 {
 	width: 55px;
 	margin-top: 10px;
+	padding: 4px;
 }
-.icons-3:hover {
+
+.achievements-col:hover .icons,
+.achievements-col-1:hover .icons-1,
+.achievements-col-2:hover .icons-2,
+.achievements-col-3:hover .icons-3 {
 	filter: brightness(600%);
+	transition: 500ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*filter: brightness(600%);
