add some styles

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -225,9 +225,10 @@ h6
     text-align: center
     height: 100vh
     align-items: center
-    justify-content: center
-    align-content: center
+    padding-top: 60px
 
+    .contact-button
+      margin-top: 15px
 
   .hero-section,
   .about-section
