add style to email input

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -268,6 +268,11 @@ h6
   .email-box
     width: 90%
 
+    input
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+
   .footer-caption
     h1
       font-size: 36px
