--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -37,12 +37,25 @@ h6
 
 
 .hero-section
+  position: relative
+
   .jumbotron
     h1
       font-size: 70px
 
     p
       margin: 50px 0
+
+.hero-section::after
+  content: ''
+  width: 100%
+  height: 3500px
+  background: url('../images/shape-2.png')
+  bottom: 0
+  left: 0
+  position: absolute
+  display: block
+  z-index: 99999
 
 .studio-bottom
   width: 550px
